# crm2

./: .gitignore  .obsidian-notes  CLAUDE.md  Cargo.toml  dev.sh  release.sh
crates/: improvements.md
crates/ledger/: Cargo.toml  README.md
crates/ledger-core/: Cargo.toml  README.md
crates/ledger-core/benches/: alias.rs
crates/ledger-core/doc/: accounts.md  architecture.md  assets.md  credit-tokens.md  errors.md  storage.md  tokens.md  transactions.md
crates/ledger-core/src/: account.rs  alias.rs  amount.rs  asset.rs  credit_token.rs  error.rs  ledger.rs  lib.rs  token.rs  transaction.rs
crates/ledger-core/src/alias/: index.rs  mod.rs  pattern.rs
crates/ledger-core/src/saga/: context.rs  create_credit_tokens.rs  create_tokens.rs  insert_tx.rs  mark_spent.rs  mod.rs
crates/ledger-core/src/storage/: mod.rs  test_support.rs  tests.rs
crates/ledger-sqlite/: Cargo.toml  README.md
crates/ledger-sqlite/doc/: queries.md  schema.md  storage-contract.md
crates/ledger-sqlite/migrations/: 001_ledger.sql
crates/ledger-sqlite/src/: lib.rs
crates/ledger-viewer/: Cargo.toml
crates/ledger-viewer/src/: main.rs  viewer.html
crates/ledger/doc/: architecture.md  credit-token-selection.md  debt-strategies.md  errors.md  token-selection.md
crates/ledger/src/: builder.rs  error.rs  ledger.rs  lib.rs
crates/ledger/src/credit/: mod.rs  template.rs
crates/ledger/src/debt/: mod.rs  signed_position.rs  split_asset.rs
crates/ledger/src/issuance/: mod.rs  template.rs
docs/: data-structure.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  main.tsx  style.css
frontend/src/components/: DragList.tsx
frontend/src/i18n/: en.json  es.json  index.ts
frontend/src/pages/: Dashboard.tsx  Settings.tsx
migrations/: 001_initial.sql  002_products_inventory.sql  003_services.sql  004_sort_order.sql  005_services_catalog.sql  006_version_chain.sql  007_version_chain_quotes_bookings.sql  008_merge_work_orders_into_bookings.sql  009_supplier_ledger.sql  010_drop_old_utxo.sql  011_sale_payments.sql
src/: amount.rs  db.rs  error.rs  lib.rs  main.rs  seed.rs  state.rs  version.rs
src/models/: booking.rs  customer.rs  inventory.rs  mod.rs  product.rs  quote.rs  sale.rs  team.rs
src/routes/: bookings.rs  calendar.rs  config.rs  customer_groups.rs  customers.rs  inventory.rs  mod.rs  payments.rs  products.rs  quotes.rs  sales.rs  teams.rs  warehouses.rs
src/storage/: bookings.rs  config.rs  customers.rs  inventory.rs  mod.rs  payments.rs  products.rs  quotes.rs  sales.rs  teams.rs
tests/: inventory_and_ledger.rs
(+20 files in other folders)
