[package]
name = "ledger-core"
version = "0.1.0"
edition = "2021"
description = "Low-level append-only hierarchical UTXO ledger engine"

[features]
test-support = []

[dependencies]
arc-swap = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
