[package]
name = "ledger-viewer"
version = "0.1.0"
edition = "2021"
description = "Standalone HTML viewer for the UTXO ledger"

[[bin]]
name = "ledger-viewer"
path = "src/main.rs"

[dependencies]
ledger = { path = "../ledger" }
ledger-sqlite = { path = "../ledger-sqlite" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
